build: upgrade backend to Java 21 and enable virtual threads
Upgrade the backend environment from Java 17 to Java 21 to leverage
modern language features and performance improvements. This includes
enabling Spring Boot's virtual thread support to improve concurrency
handling for I/O-bound operations.

- Update BE/pom.xml to use Java 21
- Update CI/CD workflow to use JDK 21
- Update Dockerfile to use Java 21 runtime and build images
- Enable `spring.threads.virtual.enabled=true` in application properties
- Refactor OcopController to use modern List API (`getFirst()`)
- Update documentation (README, DEVELOPMENT_SETUP, PROJECT_OVERVIEW)
  to reflect the new Java version requirement